2006-06-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/wxt.trm: Add index point for "help set term wxt".

	* configure.in src/variable.c:  Only invoke kpsexpand if configuration
	option --with-kpsexpand is chosen at build time.
	Bug #1377786

2006-06-26  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/help.c (FindHelp): Fixed bug introduced on 2006-06-23 where
	strcpy() overwrote keyword, inadvertently losing the subtopic string.
	Now expand all abbreviated sub-keywords until end of keyword string.

	* src/util.c (lower_case): Fix off-by-one bug in characters treated.

2006-06-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): If a data field matches the current setting
	of 'set datafile missing "foo"', then do not interrupt the plotted line
	spanning the adjacent points in the plot.  This was the behavior in 
	version 3.7, and is what the documents describe, but has not been the
	case in version 4.0.
	Bugs #775810 #918793 #969322 #1403945

2006-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c: Whitespace cleanup, comments.

	* demo/contours.dem demo/vector.dem: Update demo to use "set view map".

2006-06-23  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/help.c (FindHelp): Return a pointer to an empty help key if the
	user help string is ambiguous.  Change the len computation from strlen()
	to strcspn() so that non ambiguous, sub-optioned strings work.
	(help): Only PrintHelp if text exists to prevent blank line at output.

2006-06-23  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/image.dem: Clean up missing quotes.  Removed some resets so
	that the palette doesn't change except when necessary.

	* src/graphics.dem src/set.c: Cosmetic changes.

2006-06-22  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/datafile.c (df_readline): Check input values
	against NaN, but only if the system supports the isnan() test.
	NaN input values are treated as UNDEFINED.
	Bug #1490699
